--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="shortcut icon" type="image/ico" href="/src/assets/favicon.ico" />
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs/dist/tf.min.js"></script>
     <title>Solid App</title>
   </head>
   <body>
@@ -12,5 +13,29 @@
     <div id="root"></div>
 
     <script src="/src/index.tsx" type="module"></script>
+    <script>
+      // Notice there is no 'import' statement. 'tf' is available on the index-page
+      // because of the script tag above.
+
+      // Define a model for linear regression.
+      // const model = tf.sequential();
+      // model.add(tf.layers.dense({units: 1, inputShape: [1]}));
+
+      // // Prepare the model for training: Specify the loss and the optimizer.
+      // model.compile({loss: 'meanSquaredError', optimizer: 'sgd'});
+
+      // // Generate some synthetic data for training.
+      // const xs = tf.tensor2d([1, 2, 3, 4], [4, 1]);
+      // const ys = tf.tensor2d([1, 3, 5, 7], [4, 1]);
+
+      // // Train the model using the data.
+      // model.fit(xs, ys).then(() => {
+      //   // Use the model to do inference on a data point the model hasn't seen before:
+      //   // Open the browser devtools to see the output
+      //   model.predict(tf.tensor2d([5], [1, 1])).print();
+      // });
+
+      // console.log("Yo");
+    </script>
   </body>
 </html>
